[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Enemies/Enemy-Forest-Goblin-Hog-Idle-32x32.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy/enemy_1.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.5, 8 )

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0.8 ), Color( 1, 0, 0, 0.8 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
} ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 117, 13 )

[node name="Enemy_1" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 2 )
move_speed = 85
distance_treshold = 16
enemy_damage = 10
health = 25
attack_cooldown = 1.5

[node name="Texture" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 8 )
shape = SubResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/hit = SubResource( 5 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 0, 3 )
shape = SubResource( 4 )

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="on_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="on_timer_timeout"]
